// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PackageActivity render to match the default snapshot when no pipeline 1`] = `
<div
  class="append-bottom-default"
>
  <h3
    class="gl-font-size-16"
  >
    Activity
  </h3>
   
  <div
    class="info-well"
  >
    <!---->
     
    <!---->
     
    <div
      class="well-segment d-flex align-items-center"
    >
      <gl-icon-stub
        class="append-right-8 d-none d-sm-block"
        name="clock"
        size="16"
      />
       
      <gl-sprintf-stub
        message="Published to the repository at %{timestamp}"
      />
    </div>
  </div>
</div>
`;

exports[`PackageActivity render to match the default snapshot when there is a pipeline 1`] = `
<div
  class="append-bottom-default"
>
  <h3
    class="gl-font-size-16"
  >
    Activity
  </h3>
   
  <div
    class="info-well"
  >
    <div
      class="well-segment"
    >
      <span>
        pipeline error
      </span>
    </div>
     
    <!---->
     
    <div
      class="well-segment d-flex align-items-center"
    >
      <gl-icon-stub
        class="append-right-8 d-none d-sm-block"
        name="clock"
        size="16"
      />
       
      <gl-sprintf-stub
        message="Published to the repository at %{timestamp}"
      />
    </div>
  </div>
</div>
`;
